.provarCaches/00D5f000005vwGkEAI/objects/rstk__obshipstep__c.object
<CustomObject>
    <description>obshipstep__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__obshipstep_obship__r.rstk__externalid__c + &apos;_&apos; + rstk__obshipstep_stepid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__obshipstep_stepid__c + &apos; (&apos; +   LEFT(rstk__obshipstep_desc__c, (77 -  LEN(rstk__obshipstep_stepid__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__obshipstep_stepid__c + &apos;&apos; +  rstk__obshipstep_desc__c + &apos;&apos; +  rstk__obshipstep_obship__r.rstk__obship_shipmentid__c + &apos;&apos; +
rstk__obshipstep_provider__r.rstk__povend_vendno__c + &apos;&apos; +  rstk__obshipstep_carrier__r.rstk__sycarrier_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_actarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_actdepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_actporteta__c</fullName>
        <label>Transit Port ETA - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_actusportetd__c</fullName>
        <label>Dublin Port ETD - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_carrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipName>sycarrierobshipsteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_lastseq__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Step for Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_needarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_needdepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_needporteta__c</fullName>
        <label>Transit Port ETA -  Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_needusportetd__c</fullName>
        <label>Dublin Port ETD -  Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_obship__c</fullName>
        <label>Shipment ID</label>
        <referenceTo>rstk__obship__c</referenceTo>
        <relationshipLabel>Outbound Shipment Steps</relationshipLabel>
        <relationshipName>obshipsteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_planarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_plandepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_planporteta__c</fullName>
        <label>Transit Port ETA - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_planusportetd__c</fullName>
        <label>Dublin Port ETD - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Provider</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>povendobshipsteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_stepid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipstep_transtime__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transit Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Outbound Shipment Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Shipment Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>